The `npm install` command failed in my project. Analyze the following error output and fix it, potentially involving changes to `package.json`.
NPM Error Output:
```
npm error code ETARGET
npm error notarget No matching version found for puppeteer@22.19.0.
npm error notarget In most cases you or one of your dependencies are requesting
npm error notarget a package version that doesn't exist.
npm error A complete log of this run can be found in: /home/.npm/_logs/2025-05-03T09_44_10_533Z-debug-0.log

```
